# codex-usage

./: Cargo.toml  README.md
.tasks/: tasks.json
src/: api.rs  auth.rs  display.rs  main.rs  output.rs  pace.rs
